    menu and window list menu.
  * Add support for XDG user dirs for the Desktop and Templates
    directories.  Patch from Andrea Santilli <yawara@quipo.it> (bug 4365).
  * Fix xfdesktop/xfce menu crashing when installing new applications that
    install .desktop files and icons (bug 3615).
  * Fix occasional "double menu" after menu/icon files change on disk
    (bug 4342).


Xfce 4.6alpha (Xfce 4.5.90):
----------------------------

  * Redo how the menu system works so menus can be embedded in other
    menus.  This makes it possible for the right-click context menu
    to be the 'normal' applications menu when icons are disabled,
    but set to the desktop's own context menu when file icons are
    enabled.  In this latter case, the applications menu becomes a
    submenu of the desktop context menu (bug 2531).
  * Ditch my custom semi-fd.o-compliant menu system in favor of
    XfceMenu, our new fd.o-compliant menu implementation written by
    Jannis Pohlmann.
  * Fix URI parsing in .desktop files when launching an application so
    that the "field codes" (%-codes) are either properly ignored or
    are substituted properly.  This should fix a lot of problems where
    some apps were expecting some command-line arguments but the menu
    was just throwing them all away (bug 2942).
  * Add support for 'zoomed' backdrop mode: fill the screen with the
    backdrop edge-to-edge by scaling and/or cropping as necessary.
    This doesn't mess with the aspect ratio and is pretty nifty.  Patch
    is from <trondsg@gmail.com> (bug 3138).
  * Stop using our forked libnetk from libxfcegui4, and use the much
    better supported original libwnck.  Patch is from Nick Schermer
    (bug 3487).
  * Support the GdkScreen::monitors-changed signal present in gtk+ 2.13
    and above.  This allows xfdesktop to notice if the user plugs or
    unplugs a monitor when using an xrandr1.2-capable X server and video
    driver.