@@ -9,6 +9,7 @@ Xfce 4.6beta1 (Xfce 4.5.91):
     install .desktop files and icons (bug 3615).
   * Fix occasional "double menu" after menu/icon files change on disk
     (bug 4342).
+  * Implement "rubber banding" for the desktop icon view (bug 3245).
 
 
 Xfce 4.6alpha (Xfce 4.5.90):
